--- a/static/style.css
+++ b/static/style.css
@@ -77,7 +77,7 @@ nav {
 
 .main-container, .resume-container {
     text-align: center;
-    margin-top: 160px;
+    margin-top: 25vh;
 }
 
 #main h1, #resume-main h1 {
