--- a/templates/home.html
+++ b/templates/home.html
@@ -8,3 +8,16 @@
             </div>
         </section>
 {% endblock %}
+
+{% block content %}
+    <section id="about">
+        <h2><u>Some Things About Me</u></h2>
+        <p>My name is Orel Saada, and I'm from Jerusalem, Israel.
+        I'm just before my Computer Science Degree - which is really exciting me!
+            I knew what I wanted to do at the age of 14 - Now I'm trying to achieve it.
+            My strongest passion is for code and developing.
+        </p>
+        <img src="static/images/MyPic.jpg" alt="MyProfilePic">
+        <p>If you want to know anything else, feel free to ask. There are several ways to contact me, <a href="/contact">Take a Look.</a></p>
+    </section>
+{% endblock %}
