--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}
 {% block home %}
-        <section id="main">
-            <div class="main-container">
-                    <h1>Connect with me today.</h1>
-
-            </div>
-        </section>
+    <section id="contact-main">
+        <div class="contact-container">
+            <h1>Connect with me today.</h1>
+            <h2>I would like to hear from you in any way you will choose.</h2>
+            <a href="https://www.instagram.com/orel.saada/" class="contact" target="_blank"><img src="static/images/insta.png" alt="Instagram Icon"></a>
+            <a href="https://www.linkedin.com/in/orel-saada-925487191/" class="contact" target="_blank"><img src="static/images/linkedin.png" alt="Linkedin Icon"></a>
+            <a href="https://github.com/Orelsaada" class="contact" target="_blank"><img src="static/images/github.png" alt="Github Icon"></a>
+        </div>
+    </section>
 {% endblock %}
