--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,9 +36,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Dropdown</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="/home">Home</a>
+                    <a href="/resume">Resume</a>
+                    <a href="/contact">Contact</a>
                 </div>
             </div>
         </header>
