--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% block home %}
     <section id="contact-main">
         <div class="contact-container">
-            <h1>Connect with me today.</h1>
+            <h1>Connect with me today</h1>
             <h2>I would like to hear from you in any way you will choose.</h2>
             <a href="https://www.instagram.com/orel.saada/" class="contact" target="_blank"><img src="static/images/insta.png" alt="Instagram Icon"></a>
             <a href="https://www.linkedin.com/in/orel-saada-925487191/" class="contact" target="_blank"><img src="static/images/linkedin.png" alt="Linkedin Icon"></a>
