--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,8 @@
             </nav>
 
             <div class="dropdown">
-                <button class="dropbtn">Dropdown</button>
+                <input type="checkbox" id="menu">
+                <label for="menu">menu</label>
                 <div class="dropdown-content">
                     <a href="/home">Home</a>
                     <a href="/resume">Resume</a>
