--- a/static/style.css
+++ b/static/style.css
@@ -46,18 +46,41 @@ nav {
     padding: 20px;
     
 }
-.dropbtn {
+label {
+    display: block;
+    cursor: pointer;
     position: relative;
-    width: 40px;
-    height: 40px;
-    border: none;
-    text-indent: -99999px;
-    background: url('images/menu-icon.png');
+    background: url('images/menu-icon.png') no-repeat center;
     background-size: 100% 100%;
+    padding: 15px;
+    width: 20px;
+    text-indent: -99999px;
+
+}
+
+input#menu {
+    display: none;
+}
+
+/* Menu Toggle */
+input:checked ~ label {
+    background: url('images/menu-x.png') no-repeat center;
+    background-size: 100% 100%;
+    padding: 15px;
+    width: 20px;
+}
+
+input:checked ~ .dropdown-content {
+    max-height: 100%;
+    display: block;
 }
 
 .dropdown-content {
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    transition: all 1s ease;
 }
 
 .dropdown-content a {
@@ -66,17 +89,11 @@ nav {
     background-color: white;
     text-align: center;
     text-decoration: none;
-    font-size: 30px;
-    padding-top: 7vh;
-    padding-bottom: 7vh;
+    font-size: 25px;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
 }
 
-.dropdown:hover .dropdown-content {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 80px;
-}
 
 /* Main Section */
 .landing {
