--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
             I knew what I wanted to do at the age of 14 - Now I'm trying to achieve it.
             My strongest passion is for code and developing.
         </p>
-        <img src="static/images/MyPic.jpg" alt="MyProfilePic">
+        <img src="static/images/MyPic.jpg" alt="MyProfilePic" class="profile-pic">
         <p>If you want to know anything else, feel free to ask. There are several ways to contact me, <a href="/contact">Take a Look.</a></p>
     </section>
 {% endblock %}
