--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,6 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background-color: black;
 
 }
 
@@ -169,6 +168,18 @@ font-size: 1.3em;}
     margin-right: auto;
     margin-left: auto;
 }
+
+#about, .profile-pic {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: 0.5s all ease-in-out;
+}
+
+#about.appear, .profile-pic.appear {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
 /* Resume */
 .resume {
     margin: 0;
