--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,8 +38,11 @@
                 <label for="menu">menu</label>
                 <div class="dropdown-content">
                     <a href="/home">Home</a>
+                    <hr class="hr-menu">
                     <a href="/resume">Resume</a>
+                    <hr class="hr-menu">
                     <a href="/contact">Contact</a>
+                    <hr class="hr-menu">
                 </div>
             </div>
         </header>
