--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="rPqOglVZf2Oac7pxRbuLdt8hkYetVziawcdHLJ2OURU" />
     <link rel="stylesheet" href="static/style.css">
     <link rel="shortcut icon" type="image/png" href="static/images/my-icon2.png">
     {% if title %}
